# bread-launcher

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  README.md  TODOS.md  build-linux.sh  build-mingw.sh  build.rs  build.sh  compile_flags.txt
.github/workflows/: rust.yml
src/: account.rs  client.json  config.h  init.rs  instance.rs  logs.rs  main.cpp  main.rs  settings.rs
src/account/: legacy.rs  mod.rs  mojang.rs  msa.rs
src/app/: about.rs  accounts.rs  add_instance.rs  init.rs  launch.rs  mod.rs  run.rs  settings.rs  widget_instance.rs
src/assets/: mod.rs  versions.json
src/assets/icons/: mod.rs
src/forge/: mod.rs
src/instance/: mod.rs
src/launcher/: minecraft.rs  minecraft_json.rs  mod.rs
src/loaders/: mod.rs
src/loaders/forge/: libraries.rs  mod.rs  version_manifest.rs
src/loaders/minecraft/: arguments.rs  java_version.rs  libraries.rs  mod.rs  organized.rs  version_manifest.rs
src/minecraft/: arguments.rs  assets.rs  downloads.rs  java_version.rs  libraries.rs  mod.rs  organized.rs  rules.rs  version_manifest.rs
src/tests/: downloads.rs  launches.rs  mod.rs
src/utils/: download.rs  fs.rs  message.rs  mod.rs  serde_async_mutex.rs  sha1.rs  sha1mismatch.rs
src/widgets/: mod.rs  selectable_image_label.rs
toolchains/: build-linux.sh  build-mingw.sh  build-mingw64.sh  mingw32.cmake  mingw64.cmake
