[package]
name         = "bread-launcher"
authors      = [ "croisen <andrewjames.git.gan@gmail.com>" ]
version      = "0.0.14"
edition      = "2024"
rust-version = "1.88"
repository   = "https://github.com/croisen/bread-launcher"
readme       = "README.md"
license-file = "LICENSE"

[dependencies]
anyhow      = { version = "1.0.98", default-features = false, features = ["backtrace", "std"] }
chrono      = "0.4.41"
eframe      = { version = "0.32.0", default-features = false, features = ["default_fonts", "glow", "persistence", "serde", "wayland", "x11"] }
egui        = { version = "0.32.0", default-features = false, features = ["callstack", "deadlock_detection", "default_fonts", "log", "persistence", "rayon", "serde"] }
egui_extras = { version = "0.32.0", default-features = false, features = ["all_loaders", "chrono", "file", "serde"] }
fern        = { version = "0.7.1", default-features = false, features = ["chrono", "colored"] }
flate2      = { version = "1.1.1", default-features = false, features = ["zlib-rs"] }
image       = { version = "0.25.6", default-features = false, features = ["jpeg", "png", "serde"] }
log         = { version = "0.4.27", default-features = false, features = ["std"] }
native-dialog = "0.9.3"
oauth2      = { version = "5.0.0", default-features = false, features = ["reqwest-blocking", "rustls-tls", "timing-resistant-secret-traits"] }
opener = "0.8.2"
parking_lot = { version = "0.12.4", default-features = false, features = ["arc_lock", "deadlock_detection", "hardware-lock-elision", "serde"] }
rand        = "0.9.1"
reqwest     = { version = "0.12.15", default-features = false, features = ["blocking", "cookies", "http2", "json", "gzip", "rustls-tls"] }
rust-crypto = "0.2.36"
serde       = { version = "1.0.219", default-features = false, features = ["alloc", "derive", "rc"] }
serde_json  = { version = "1.0.140", default-features = false, features = ["preserve_order"] }
sysinfo     = { version = "0.37.0", default-features = false, features = ["system"] }
tar         = "0.4.44"
uuid        = { version = "1.16.0", default-features = false, features = ["v4", "v7"] }
zip         = { version = "4.3.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[profile.release]
opt-level    = "z"
strip        = true
lto          = "fat"
incremental  = true

[profile.dev]
opt-level    = "z"
strip        = "none"
lto          = "none"
incremental  = false
